RESOLVED FIXED284863
REGRESSION(287633@main): Release assert failure in Node::moveTreeToNewScope
https://bugs.webkit.org/show_bug.cgi?id=284863
Summary REGRESSION(287633@main): Release assert failure in Node::moveTreeToNewScope
Ryosuke Niwa
Reported 2024-12-17 18:28:40 PST
After 287633@main, we can hit the release assert in Node::moveTreeToNewScope.
Attachments
Ryosuke Niwa
Comment 1 2024-12-18 00:19:26 PST
EWS
Comment 2 2024-12-18 09:10:21 PST
Committed 288014@main (3485279ce29b): <https://commits.webkit.org/288014@main> Reviewed commits have been landed. Closing PR #38125 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-18 09:11:15 PST
Note You need to log in before you can comment on or make changes to this bug.