REGRESSION(287633@main): Release assert failure in Node::moveTreeToNewScope https://bugs.webkit.org/show_bug.cgi?id=284863

Reviewed by Chris Dumez.

The release assertion failure was caused by Node::cloneNode erroneously cloning nodes
using a shadow tree as the tree scope when cloning a node in the shadow tree. Fixed
the bug by always cloning using the document as the tree scope.

* LayoutTests/fast/shadow-dom/clone-node-in-shadow-tree-crash-expected.txt: Added.
* LayoutTests/fast/shadow-dom/clone-node-in-shadow-tree-crash.html: Added.
* Source/WebCore/dom/Node.cpp:
(WebCore::Node::cloneNode):
* Source/WebCore/dom/Node.h:
(WebCore::Node::cloneNode): Deleted.

Canonical link: https://commits.webkit.org/288014@main